force-app/main/default/objects/Order/fields/Bultos__c.field-meta.xml
<CustomField>
    <fullName>Bultos__c</fullName>
    <label>Bultos</label>
    <summarizedField>OrderItem.Bultos__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>