force-app/main/default/objects/Order/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle</label>
    <type>Text</type>
</CustomField>