force-app/main/default/objects/Order/fields/Dcto_PP__c.field-meta.xml
<CustomField>
    <fullName>Dcto_PP__c</fullName>
    <formula>ERUM_Descuento_P_P__c * (TotalAmount- Importe_Descuento_lineas__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dcto P.P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>