force-app/main/default/objects/Order/fields/ERUM_Agencia_de_envio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Agencia_de_envio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia de envio</label>
    <referenceTo>Agencia_de_envio__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>