force-app/main/default/objects/Order/fields/ERUM_Codigo_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Codigo_SWIFT__c</fullName>
    <label>Código SWIFT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>