force-app/main/default/objects/Order/fields/ERUM_Condiciones_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Condiciones_de_entrega__c</fullName>
    <label>Condiciones de entrega</label>
    <type>TextArea</type>
</CustomField>