force-app/main/default/objects/Order/fields/ERUM_Dia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Dia_de_pago__c</fullName>
    <label>Día de pago</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>