force-app/main/default/objects/Order/fields/ERUM_Domiciliacion__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Domiciliacion__c</fullName>
    <label>Domiciliación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>