force-app/main/default/objects/Order/fields/ERUM_IBAN__c.field-meta.xml
<CustomField>
    <fullName>ERUM_IBAN__c</fullName>
    <label>IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>