force-app/main/default/objects/Order/fields/ERUM_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Incoterms__c</fullName>
    <label>Condiciones de envío</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CondicionesDeEnvio</valueSetName>
    </valueSet>
</CustomField>