force-app/main/default/objects/Order/fields/ERUM_Nombre_Direccion__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Nombre_Direccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre Dirección</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>ERUM_Direcciones_Envio__c.ERUM_Nombre_comercial__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ERUM_Direcciones_Envio__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>