force-app/main/default/objects/Order/fields/ERUM_Pais__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Pais__c</fullName>
    <formula>ERUM_Nombre_Direccion__r.ERUM_Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>