force-app/main/default/objects/Order/fields/Importe_Descuento_lineas__c.field-meta.xml
<CustomField>
    <fullName>Importe_Descuento_lineas__c</fullName>
    <label>Importe Descuento lineas</label>
    <summarizedField>OrderItem.Importe_D_linea__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>