force-app/main/default/objects/Order/fields/Importe_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_IVA__c</fullName>
    <formula>ERUM_IVA__c * Subtotal_con_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>