force-app/main/default/objects/Order/fields/Peso_bruto_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_bruto_Kg__c</fullName>
    <label>Peso bruto (Kg)</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>