force-app/main/default/objects/Order/fields/Peso_neto_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_neto_Kg__c</fullName>
    <label>Peso neto (Kg)</label>
    <summarizedField>OrderItem.Peso_neto_Kg__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>