force-app/main/default/objects/Order/fields/Subtotal_con_descuento__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_con_descuento__c</fullName>
    <formula>Total_Bruto__c - Dcto_PP__c - Importe_Descuento_lineas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base imponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>