force-app/main/default/objects/Order/fields/Total_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Total_Bruto__c</fullName>
    <label>Peso bruto (Kg)</label>
    <summarizedField>OrderItem.Subtotal__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>