force-app/main/default/objects/Order/fields/Total_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Total_impuestos__c</fullName>
    <formula>Importe_RE__c + Importe_Pack__c + Importe_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>