force-app/main/default/objects/Order/fields/Volumen_m3__c.field-meta.xml
<CustomField>
    <fullName>Volumen_m3__c</fullName>
    <label>Volumen (m3)</label>
    <summarizedField>OrderItem.Volumen_m3__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>