force-app/main/default/objects/Order/recordTypes/OrderRetail.recordType-meta.xml
<RecordType>
    <fullName>OrderRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar pedidos pertenecientes a la empresa de retail</description>
    <label>Retail</label>
</RecordType>