force-app/main/default/objects/Order/recordTypes/OrderSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>OrderSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar pedidos pertenecientes a la empresa de seguridad vial</description>
    <label>Seguridad Vial</label>
</RecordType>